# tmgenius-ascend-vllm-v3

./: .dockerignore  .gitignore  README.md  UPDATEPLAN.md  deploy.md  main.py  pyproject.toml
core/: logging.py
docker/: Dockerfile-310p  Dockerfile-910b  Dockerfile-x86-64  docker-compose-910b.yaml  docker-compose.yaml  entrypoint.sh  tmgenius-docker-800i-a2-v2-single-server.yaml
scripts/: start_asr_gpu.sh  start_asr_npu.sh
src/: config.py  metrics.py
src/api/: health.py  http_endpoints.py  websocket_handler.py
src/core/: logging.py  opus_decoder.py
src/services/: asr_service.py  itn_service.py  license_plate.py  rnnoise_service.py  session_manager.py  vad_service.py
test/: __init__.py  e2e_ws_client.py  itn_inverse_normalize.py  offline_asr_vllm_infer.py  online_asr_vllm_infer.py  rnnoise_denoise.py  ten_vad_service.py  test_concurrent.py  test_logs_stream.py
wheels/aarch64/: requirements.txt  rnnoise-0.1.0-py3-none-any.whl
wheels/x86_64/: requirements.txt  rnnoise-0.1.0-py3-none-any.whl  wetextprocessing-1.0.6.dev3+dirty-py3-none-any.whl
