[project]
name = "tmgenius-ascend-vllm-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.49.0",
    "prometheus-client>=0.25.0",
    "httpx>=0.28.0",
    "numpy>=2.4.0",
    "websockets>=16.0",
    "pydantic>=2.13.0",
]
